--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,8 +1,7 @@
-# You can change this base image to anything else
-# But make sure to use the correct version of Java
-FROM adoptopenjdk/openjdk11:alpine-jre
+# Use OpenJDK 17 as the base image
+FROM openjdk:17-jdk-alpine
 
-# Simply the artifact path
+# Simplify the artifact path
 ARG artifact=target/spring-boot-web.jar
 
 WORKDIR /opt/app
@@ -11,3 +10,4 @@ COPY ${artifact} app.jar
 
 # This should not be changed
 ENTRYPOINT ["java","-jar","app.jar"]
+
