--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,13 +1,9 @@
-# You can change this base image to anything else
-# But make sure to use the correct version of Java
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM openjdk:17-jdk-slim
 
-# Simply the artifact path
-ARG artifact=target/spring-boot-web.jar
+RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /opt/app
+WORKDIR /var/lib/jenkins/workspace/auto-job
 
-COPY ${artifact} app.jar
+# Add any additional environment variables or setup here
 
-# This should not be changed
-ENTRYPOINT ["java","-jar","app.jar"]
+CMD ["cat"]
